task: Atualizando readme.

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,17 @@
-= XYZ Reader Starter Code
+# XYZReader - Um leitor simulado de feed RSS exibindo fotos em banner e manchetes fantásticas!
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+# Visão geral do projeto
+Um aplicativo para atender às diretrizes do Material Design e converter um conjunto de simulações de design estático em um aplicativo totalmente operacional.
+Ao fazer este aplicativo tive a oportunidade de melhorar o design, uma habilidade essencial no desenvolvimento de aplicativos que os usuários vão amar. Ele também replica uma tarefa comum do desenvolvedor, que é atualizar e alterar o design de um aplicativo à medida que novos padrões são divulgados.
+
+# O que aprendi?
+* Compreender os fundamentos do design do Android.
+* Aplicar as diretrizes do Material Design a um aplicativo móvel.
+* Separar uma interface em planos.
+* Empregar efetivamente transições e movimentos.
+
+
+## Imagens ##
+<img  src="https://raw.githubusercontent.com/adalbertofjr/XYZReader/master/app-images/image_1.png" width="203" height="339" />
+<img  src="https://raw.githubusercontent.com/adalbertofjr/XYZReader/master/app-images/image_2.png" width="203" height="339" />
+<img  src="https://raw.githubusercontent.com/adalbertofjr/XYZReader/master/app-images/image_3.png" width="203" height="339" />
